Added Delete APIs
